<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPassword"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/old_password"
        app:hintTextColor="@color/ButtonColor"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_oldPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NewPassword"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/new_password"
        app:hintTextColor="@color/ButtonColor"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/agent_text_input_border_greylight"
        android:hint="@string/confirm_new_password"
        app:hintTextColor="@color/ButtonColor"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newpasswordConfg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnOtpVerify"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/bottom"
        android:text="@string/confirm"
        android:textColor="@color/white" />

</LinearLayout>