<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.RegisterActivity.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:elevation="10dp"
        android:visibility="gone"
        android:padding="20sp"
        app:cardBackgroundColor="@color/bottom"
        app:cardCornerRadius="50dp">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:theme="@style/AppTheme.WhiteAccent" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/my_bar_layout" />

                <ImageView
                    android:id="@+id/ivLoginLogo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/toolbar"
                    android:src="@drawable/app_logo"
                    tools:ignore="ContentDescription" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/ivLoginLogo"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/first_name"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvLastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvFirstName"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/last_name"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvLastName"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvEmail"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/phone_number"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvPhoneNumber"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/Password"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPasswordConfg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvPassword"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/password_confirmation"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordConfg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvCouponCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvPasswordConfg"
                    android:layout_margin="20dp"
                    android:background="@drawable/editbox"
                    android:hint="@string/coupon_code"
                    android:paddingStart="10dp"
                    app:hintTextColor="@color/ButtonColor"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCouponCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/mCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCouponCode"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/ButtonColor"
                    android:buttonTint="@color/ButtonColor" />

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCouponCode"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_toEndOf="@id/mCheckbox"
                    android:text="@string/PrivacyPolicy"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/mCheckbox"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/Signup"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>